# Ask_Pete

./: .gitignore  AI_MIRROR_DEMO_GUIDE.md  BACKEND_INDEX.md  CONTRIBUTING.md  Cargo.toml  DESIGN_SYSTEM.md  FUNCTION_CATALOG.md  GIT_COMMIT_PLAN.md  INSTRUCTIONAL_DESIGN_LOOP.md  LDT_CAPSTONE_REPORT_GUIDE.md  LICENSE  MVP_GAP_ANALYSIS.md  PHASE_1_COMPLETE.md  README.md  SESSION_HANDOFF.md  START_HERE.md  TRAINYARD_QUICKSTART.md  UI_MAPPING.md  ask_pete_frontend-33ac9b1d4bacf75c.js  ask_pete_frontend-33ac9b1d4bacf75c_bg.wasm  ask_pete_frontend-4089c4111b1a812.js  ask_pete_frontend-4089c4111b1a812_bg.wasm  ask_pete_frontend-61fa4acf05282965.js  ask_pete_frontend-61fa4acf05282965_bg.wasm  ask_pete_frontend-64681c9a38b34c9.js  ask_pete_frontend-64681c9a38b34c9_bg.wasm  ask_pete_frontend-97c0fd7692396f73.js  ask_pete_frontend-97c0fd7692396f73_bg.wasm  ask_pete_frontend-9c5c5ad22eb07f5f.js  ask_pete_frontend-9c5c5ad22eb07f5f_bg.wasm  ask_pete_frontend-dbfe56d00dc3f6b7.js  ask_pete_frontend-dbfe56d00dc3f6b7_bg.wasm  ask_pete_frontend-e27230b1d7f8984e.js  ask_pete_frontend-e27230b1d7f8984e_bg.wasm  ask_pete_frontend-fd3d106a1b08166d.js  ask_pete_frontend-fd3d106a1b08166d_bg.wasm  backup.ps1  build_log.txt  check_error.txt  check_error_0.8.4.txt  (+43 more)
apps/grand-central/: Cargo.toml
apps/grand-central/src/: check_quantized.rs  main.rs  state.rs  static_assets.rs
apps/grand-central/src/ai/: memory.rs  mod.rs
apps/grand-central/src/domain/: player.rs
apps/grand-central/src/handlers/: expert.rs  mod.rs  persona_test_final.rs  quest.rs  weigh_station.rs
apps/grand-central/src/middleware/: auth.rs
apps/grand-central/src/routes/: campaign_routes.rs  expert.rs  mod.rs  pete.rs  story_graphs.rs
apps/grand-central/src/services/: model_registry.rs  recharge_center.rs  weigh_station.rs
apps/node-garden/: Cargo.toml
apps/node-garden/src/: api.rs  app.rs  server_functions.rs
apps/node-garden/src/components/: ai_test_panel.rs  artifact_card.rs  mod.rs
apps/node-garden/src/game/: engine.rs
apps/node-garden/src/pages/: play_mode.rs
backend/: Cargo.toml  check_output.txt  check_output_backend.txt  check_output_backend_2.txt  check_output_utf8.txt  check_output_utf8_2.txt  download_model.ps1  output_backend.txt  run_output.txt  test_output.txt  tree_0.16.txt
backend/migrations/: 20251128_001_consolidated_schema.sql  20251128_create_scenarios.sql  20251128_create_vocabulary_bank.sql  20251129_001_add_locomotive_profiles.sql
backend/src/: main.rs  state.rs  train_yard.rs
backend/src/ai/: architect.rs  local_inference.rs  lore.rs  memory.rs  mod.rs  socratic_engine.rs  tests.rs
backend/src/ai/llm/: gemini_client.rs  gemma_server.rs  llama_engine.rs  mod.rs
backend/src/ai/prompts/: mod.rs
backend/src/antigravity/: mod.rs
backend/src/core/: mod.rs  traits.rs
backend/src/domain/: game_logic.rs  persona_logic.rs
backend/src/game/: components.rs  multiplayer_client.rs  systems.rs
backend/src/handlers/: ai_mirror.rs  architect.rs  auth.rs  campaign.rs  expert.rs  mod.rs  persona.rs  player.rs  weigh_station.rs
backend/src/models/: narrative.rs
backend/src/routes/: mod.rs  model_routes.rs  pete.rs  weigh_station_routes.rs
backend/src/services/: mod.rs  model_manager.rs
crates/ask_pete_ai/: Cargo.toml
crates/ask_pete_ai/src/: architect.rs  error.rs  iron_split.rs  json_utils.rs  lib.rs  local_inference.rs  lore.rs  socratic_engine.rs  vocabulary.rs
crates/ask_pete_ai/src/antigravity/: mod.rs
crates/ask_pete_ai/src/llm/: gemini_client.rs  mod.rs
crates/ask_pete_ai/src/prompts/: mod.rs
crates/ask_pete_auth/: Cargo.toml
crates/ask_pete_auth/src/: handlers.rs  middleware.rs
crates/ask_pete_client/: Cargo.toml  Trunk.toml  build_error_utf8.txt  check_output.txt  frontend_build_utf8.txt  output.txt
crates/ask_pete_client/public/stories/: demo.narrative.json
crates/ask_pete_client/src/: app.rs  bevy_app.rs  lib.rs  main.rs  telemetry.rs
crates/ask_pete_core/: Cargo.toml
crates/ask_pete_core/src/: economy.rs  expert.rs  graph_manager.rs  lib.rs  locomotive.rs  narrative_graph.rs  prompts.rs  reflection.rs  trainyard.rs
crates/ask_pete_db/: Cargo.toml
crates/ask_pete_db/src/: conversation_memory.rs  lib.rs  vector_store.rs
crates/ask_pete_frontend/: Cargo.toml
crates/ask_pete_frontend/dist_new/: ask_pete_frontend-5c98cad178d6a602.js  index.html  output-785c63ed4e73b352.css
crates/ask_pete_frontend/src/: ui_theme.rs
crates/ask_pete_node_garden/: Cargo.toml  Trunk.toml
crates/ask_pete_node_garden/src/: api.rs  app.rs  lib.rs  server_functions.rs  ui_theme.rs
crates/ask_pete_physics/: Cargo.toml
crates/ask_pete_physics/src/: combustion.rs  components.rs  lib.rs  mod.rs  multiplayer_client.rs  systems.rs
crates/ask_pete_physics/tests/: physics_tests.rs.bak
crates/ask_pete_server/: .env.example  Cargo.toml  build_error.txt  migration_error.txt
crates/ask_pete_server/migrations/: 20251201034102_create_knowledge_tables.sql  20251201080000_create_economy_tables.sql  20251201090000_create_campaign_tables.sql  20251201090001_create_character_tables.sql  20251203193500_create_vocabulary_tables.sql
crates/ask_pete_server/src/: error.rs  main.rs  state.rs  static_assets.rs
crates/ask_pete_services/: Cargo.toml
crates/ask_pete_services/src/: downloader.rs  error.rs  hardware_scanner.rs  model_registry.rs  notebook_lm.rs  pete.rs  recharge_center.rs  weigh_station.rs
crates/ask_pete_trainyard/: Cargo.toml
crates/ask_pete_trainyard/src/: api.rs  lib.rs
libs/core/: Cargo.toml
libs/core/src/: lib.rs  quests.json  railway.rs
libs/core/src/ai/: mod.rs  (+1 more)
libs/domain-auth/: Cargo.toml
libs/domain-auth/src/: lib.rs  middleware.rs
libs/domain-physics/: Cargo.toml
libs/domain-physics/src/: components.rs  lib.rs  systems.rs
libs/domain-trainyard/: Cargo.toml
libs/domain-trainyard/src/: api.rs  lib.rs
libs/infra-ai/: Cargo.toml
libs/infra-ai/src/: architect.rs  knowledge_retrieval.rs  lib.rs  local_inference.rs  socratic_engine.rs
libs/infra-db/: Cargo.toml
libs/infra-services/: Cargo.toml
libs/infra-services/src/: lib.rs  mod.rs
(+324 files in other folders)
