[workspace]
resolver = "2"
members = [
    "crates/ask_pete_ai",
    "crates/ask_pete_auth",
    "crates/ask_pete_client",
    "crates/ask_pete_core",
    "crates/ask_pete_db",
    "crates/ask_pete_frontend",
    "crates/ask_pete_node_garden",
    "crates/ask_pete_physics",
    "crates/ask_pete_researcher",
    "crates/ask_pete_server",
    "crates/ask_pete_services",
    "crates/ask_pete_tools",
    "crates/ask_pete_trainyard"
]

[workspace.dependencies]
# The Core Engine
bevy = { version = "0.13", default-features = false, features = ["bevy_asset", "bevy_winit", "bevy_render", "bevy_core_pipeline", "bevy_sprite", "bevy_ui", "bevy_text", "multi-threaded"] }
bevy_ecs = "0.13"
bevy_defer = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"

# Async Runtime
tokio = { version = "1.36", features = ["full"] }
axum = "0.7"
tracing = "0.1"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Database & Storage
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
lancedb = "0.4"
arrow = "50.0"
lru = "0.12"

# Frontend
leptos = { version = "0.8.0-rc3", features = ["csr", "nightly"] }
leptos_router = "0.8.0-rc3"
leptos_meta = "0.8.0-rc3"
gloo-net = "0.5"
gloo-timers = "0.3"
gloo-console = "0.3"
wasm-bindgen = "0.2.93"
web-sys = "0.3"
js-sys = "0.3"

# AI
candle-core = "0.7.1"
candle-nn = "0.7.1"
candle-transformers = "0.7.1"
tokenizers = "0.19.1"
hf-hub = "0.3.2"

# Utils
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
regex = "1.10"
sha2 = "0.10"
byteorder = "1.5"
dotenv = "0.15"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "timeout", "catch-panic", "trace", "fs"] }
tracing-subscriber = "0.3"
oauth2 = "4.4"
dirs = "5.0"
rust-embed = "8.0"

# HOT FIX PROTOCOL: The Armstrong Maneuver
# Overriding transitive dependencies that cause diamond conflicts (e.g., winit version mismatch).
[patch.crates-io]
# Example: Forcing a specific winit version if Bevy and another lib disagree.
# winit = { git = "https://github.com/rust-windowing/winit", tag = "v0.29.10" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3 # Optimize dependencies even in dev to prevent "Lag" (Friction).
