[package]
name = "grand-central"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bevy = { version = "0.14", default-features = false, features = ["multi_threaded"] }
bevy_yarnspinner = "0.3"
uuid = { version = "1.10", features = ["v4", "serde"] }
rust-embed = "8.0"
dirs = "5.0"
pete_core = { path = "../../libs/core", features = ["ssr"] }
domain-auth = { path = "../../libs/domain-auth" }
infra-db = { path = "../../libs/infra-db" }
infra-ai = { path = "../../libs/infra-ai" }
domain-physics = { path = "../../libs/domain-physics" }
domain-trainyard = { path = "../../libs/domain-trainyard" }
infra-services = { path = "../../libs/infra-services" }

# Added dependencies
lru = "0.12"
reqwest = { version = "0.11", features = ["json"] }
candle-core = "0.3"
candle-transformers = "0.3"
tokenizers = "0.15"
oauth2 = "4.4"
hf-hub = "0.3"
leptos = { version = "0.6", features = ["ssr"] } # Using 0.6 to match other crates if possible, or 0.7
futures-util = "0.3"
async-trait = "0.1"
thiserror = "1.0"
log = "0.4"
mime_guess = "2.0.5"

[features]
default = []
