[package]
name = "node-garden"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.0-rc3", features = ["nightly", "csr"] }
leptos_router = { version = "0.8.0-rc3" }
leptos_meta = { version = "0.8.0-rc3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.93"
gloo-net = "0.5"
gloo-timers = "0.3"
gloo-console = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "HtmlElement", "Element", "Node", "DomRect", "Storage"] }
anyhow = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
log = "0.4"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

# Trinity Libraries
pete_core = { path = "../../libs/core" }
domain-trainyard = { path = "../../libs/domain-trainyard" }
domain-physics = { path = "../../libs/domain-physics" }
ask_pete_player = { path = "../player" }
ask_pete_teacher = { path = "../teacher" }
ask_pete_researcher = { path = "../researcher" }
ask_pete_frontend = { path = "../../frontend" }
console_log = "1.0"
console_error_panic_hook = "0.1"

[features]
hydrate = ["leptos/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]
