[package]
name = "ask_pete_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
tokenizers = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
log = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls", "uuid"] }
infra-db = { package = "ask_pete_db", path = "../ask_pete_db" }
pete_core = { package = "ask_pete_core", path = "../ask_pete_core" }
tracing = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
