[package]
name = "ask_pete_auth"
version = "0.1.0"
edition = "2021"

[dependencies]

axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
oauth2 = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
pete_core = { package = "ask_pete_core", path = "../ask_pete_core" }
