[package]
name = "ask_pete_core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# Main serialization library, used by everything
serde = { workspace = true, features = ["derive"] }

# Used by our static loaders to parse the .json files
serde_json = { workspace = true }

# Used for `Lazy::new` to load static data once
once_cell = "1.19"

# --- Leptos/SQLx Integration ---
leptos = { workspace = true, optional = true }
bevy_ecs = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }

# --- AI Dependencies (Shared) ---
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
wasm-bindgen = { workspace = true }
gloo-net = { workspace = true }
js-sys = { workspace = true }
byteorder = { workspace = true }
web-sys = { workspace = true, features = ["console", "Window", "Response", "Request", "RequestInit", "RequestMode", "Headers"] }
anyhow = { workspace = true }
wasm-bindgen-futures = "0.4"



[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
ssr = ["leptos/ssr", "bevy_ecs", "sqlx", "chrono"]
