[package]
name = "ask_pete_frontend"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

# Core Framework
leptos = { workspace = true, features = ["nightly", "csr"] }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }
serde = { workspace = true, features = ["derive"] }
wasm-bindgen = { workspace = true }
gloo-net = { workspace = true }
serde_json = { workspace = true }
gloo-timers = { workspace = true, features = ["futures"] }
gloo-console = { workspace = true }
common = { package = "ask_pete_core", path = "../ask_pete_core" }
web-sys = { workspace = true, features = [
    "MouseEvent", "Element", "SvgElement", "DomRect", "HtmlFormElement", "FormData", "Event",
    # WebGPU Support for Client-Side AI
    "console", "Window", "Performance", "Gpu", "GpuDevice", "GpuAdapter", "GpuQueue", 
    "GpuBuffer", "GpuCommandEncoder", "GpuComputePipeline", "GpuBindGroup", "GpuBindGroupLayout",
    "GpuPipelineLayout", "GpuShaderModule", "Navigator", "Storage",
    "Geolocation", "Position", "Coordinates", "PositionError", "PositionOptions"
] }
console_error_panic_hook = "0.1"
console_log = "1.0"
log = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
wasm-bindgen-futures = "0.4"
uuid = { workspace = true, features = ["v4", "serde", "js"] }
sha2 = { workspace = true }
chrono = { workspace = true, features = ["serde", "wasmbind"] }
byteorder = { workspace = true }
js-sys = { workspace = true }
anyhow = { workspace = true }

# AI Dependencies
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }

# Server-Side Rendering (SSR) Dependencies
[dependencies.axum]
workspace = true
optional = true

[dependencies.leptos_axum]
version = "0.8.0-rc3"
optional = true

[dependencies.tokio]
workspace = true
optional = true

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
# Fixes WASM runtime error by using browser's JS-based randomness source
getrandom = { version = "0.2", features = ["js"] }
half = "=2.4.1"

[features]
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[[bin]]
name = "frontend_bin"
path = "src/main.rs"
