[package]
name = "ask_pete_physics"
version = "0.1.0"
edition = "2021"

[dependencies]

bevy = { workspace = true, default-features = false, features = ["bevy_audio"] }
bevy_defer = { workspace = true }
bevy_yarnspinner = "0.2.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
pete_core = { package = "ask_pete_core", path = "../ask_pete_core", features = ["bevy_ecs"] }
infra-services = { package = "ask_pete_services", path = "../ask_pete_services" }
