[package]
name = "ask_pete_trainyard"
version = "0.1.0"
edition = "2021"

[dependencies]

leptos = { workspace = true, features = ["nightly", "csr", "hydrate"] }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4", "serde"] }
gloo-console = { workspace = true }
leptos_router = { workspace = true }
gloo-timers = { workspace = true, features = ["futures"] }

reqwest = { workspace = true, features = ["json"] }
pete_core = { package = "ask_pete_core", path = "../ask_pete_core" }
web-sys = { workspace = true, features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "MouseEvent", "Element", "DomRect"] }
