[package]
name = "pete_core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# Main serialization library, used by everything
serde = { version = "1.0", features = ["derive"] }

# Used by our static loaders to parse the .json files
serde_json = "1.0"

# Used for `Lazy::new` to load static data once
once_cell = "1.19"

# --- Leptos/SQLx Integration ---
leptos = { version = "0.8.0-rc3" }
bevy_ecs = { version = "0.14", optional = true }
sqlx = { version = "0.8", features = [ # Pinned version
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
], optional = true }
chrono = { version = "=0.4.38", features = ["serde"], optional = true }

# --- AI Dependencies (Shared) ---
candle-core = { version = "0.8.0", features = [] }
candle-nn = "0.8.0"
candle-transformers = { version = "0.8.0", features = [] }
wasm-bindgen = "0.2.93"
gloo-net = "0.5"
js-sys = "0.3"
byteorder = "1.5.0"
web-sys = { version = "0.3", features = ["console", "Window", "Response", "Request", "RequestInit", "RequestMode", "Headers"] }
anyhow = "1.0"
wasm-bindgen-futures = "0.4"



[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
ssr = ["leptos/ssr", "bevy_ecs", "sqlx", "chrono"]
