[package]
name = "domain-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
oauth2 = "4.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
pete_core = { path = "../core" }
