[package]
name = "domain-physics"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", default-features = false, features = ["bevy_audio"] }
bevy_defer = "0.12"
bevy_yarnspinner = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
pete_core = { path = "../core" }
infra-services = { path = "../infra-services" }
