[package]
name = "domain-trainyard"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8.0-rc3", features = ["nightly"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
gloo-console = "0.3"
leptos_router = "0.8.0-rc3"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-net = "0.5"
reqwest = { version = "0.11", features = ["json"] }
pete_core = { path = "../core" }
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "MouseEvent", "Element", "DomRect"] }
