[package]
name = "infra-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { version = "0.8.2", features = [] }
candle-nn = { version = "0.8.2", features = [] }
candle-transformers = { version = "0.8.2", features = [] }
tokenizers = "0.20"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid"] }
infra-db = { path = "../infra-db" }
pete_core = { path = "../core" }
tracing = "0.1"
